<resources>
    <string name="app_name">ShopIST</string>
    <string name="Join">JOIN</string>
    <string name="New">NEW</string>
    <string name="new_pantry">New pantry list</string>
    <string name="new_shop">New shopping list</string>
    <string name="key_google_apis_android">AIzaSyB1im9jFRyduQ_7BVN4BCeeHa4sT5MPDFo</string>
    <string name="settings">Settings</string>
    <string name="rate">Share your love</string>
    <string name="close_button_love">Close</string>
    <string name="pantries">Pantries</string>
    <string name="stores">Stores</string>
    <string name="choose_location">Choose Location</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="choose_your_home_s_location">Choose your home\'s location</string>
    <string name="set_your_actual_location">Set your actual location</string>
    <string name="enter_the_list_name">Enter the list name</string>
    <string name="new_product">New product</string>
    <string name="quantity_to_buy">Quantity to buy</string>
    <string name="quantity">Quantity available</string>
    <string name="choose_shops">Choose shops</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="email_address">Email Address</string>
    <string name="shopist">ShopIST</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_account">Register Account</string>
    <string name="logout">Logout</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="scan_barcode">Scan Product</string>
    <string name="create_new_product">Create new product</string>
    <string name="click_to_add_a_barcode">Click to add a barcode</string>
    <string name="woriduuu">WORIDUUU</string>
    <string name="confirm">Confirm</string>
    <string name="click_to_add_a_price">Click to add a price</string>
    <string name="shared_stores">Shared Stores</string>
    <string name="shared_pantries">Shared Pantries</string>
    <string name="cart_summary">Cart summary</string>
    <string name="consume">Consume</string>
    <string name="login_as_a_guest_user">Login as a Guest User</string>
    <string name="set_new_product_name">Set new product name</string>
    <string name="set_quantity_available">Set quantity available</string>
    <string name="set_quantity_to_buy">Set quantity to buy</string>
    <string name="share_this_product">Share this product</string>
</resources>