<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/newListContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_list_background"
    android:orientation="vertical">


    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/darkGrey"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_title" />

    <TextView
        android:id="@+id/top_title"
        android:layout_width="368dp"
        android:layout_height="54dp"
        android:layout_gravity="center"
        android:elevation="4dp"
        android:padding="15dp"
        android:text="@string/new_product"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:onClick="cancelCreateProduct"
        android:padding="15dp"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constrainedHeight="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/new_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:onClick="createProductButton"
        android:padding="15dp"
        android:text="@string/create"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/product_quantity"
        android:layout_width="154dp"
        android:layout_height="49dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="52dp"
        android:hint="@string/quantity"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/product_shop"
        app:layout_constraintTop_toBottomOf="@+id/product_name">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/product_name"
        android:layout_width="271dp"
        android:layout_height="45dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/intup_text"
        android:ems="10"
        android:hint="@string/enter_the_list_name"
        android:importantForAutofill="no"
        android:inputType="textShortMessage"
        android:maxLength="25"
        android:padding="9dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_title" />

    <Button
        android:id="@+id/product_shop"
        android:layout_width="168dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:padding="9dp"
        android:text="@string/choose_shops"
        android:background="@drawable/button_background"
        android:onClick="chooseShop"
        android:ems="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_name"/>

</androidx.constraintlayout.widget.ConstraintLayout>