<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_product"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/darkGrey"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white">

        <TextView
            android:id="@+id/toolbar_product_title"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white" />

    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Product Barcode:"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/product_barcode_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_name"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/product_barcode_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/click_to_add_a_barcode"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.768" />

    <EditText
        android:id="@+id/product_name"
        android:layout_width="271dp"
        android:layout_height="45dp"
        android:layout_marginTop="31dp"
        android:background="@drawable/intup_text"
        android:ems="10"
        android:hint="@string/enter_product_name"
        android:importantForAutofill="no"
        android:inputType="textShortMessage"
        android:maxLength="25"
        android:padding="9dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/product_barcode_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_product"
        app:layout_constraintVertical_bias="0.034" />

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="210dp"
        android:layout_height="156dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/woriduuu"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_name"
        app:srcCompat="@drawable/ic_launcher_background" />

    <EditText
        android:id="@+id/product_quantity"
        android:layout_width="154dp"
        android:layout_height="49dp"
        android:layout_marginTop="252dp"
        android:hint="@string/quantity"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/product_quantity_to_buy"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_name">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/product_quantity_to_buy"
        android:layout_width="154dp"
        android:layout_height="49dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="28dp"
        android:hint="@string/quantity_to_buy"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_name">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/cancel_price_shop"
        android:layout_width="118dp"
        android:layout_height="73dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/button_background"
        android:onClick="onClickCancel"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/confirm_price_shop"
        app:layout_constraintHorizontal_bias="0.594"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/confirm_price_shop"
        android:layout_width="118dp"
        android:layout_height="73dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/button_background"
        android:onClick="onClickConfirm"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_barcode_text"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>