<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/newListContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_list_background"
    android:orientation="vertical">


    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/darkGrey"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_title" />

    <TextView
        android:id="@+id/top_title"
        android:layout_width="368dp"
        android:layout_height="54dp"
        android:layout_gravity="center"
        android:elevation="4dp"
        android:padding="15dp"
        android:text="@string/new_pantry"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:padding="15dp"
        android:text="@string/cancel"
        android:onClick="setCancelButton"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constrainedHeight="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/new_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:padding="15dp"
        android:text="@string/create"
        android:onClick="setCreateButton"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/list_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_name" />


    <Button
        android:id="@+id/pick_location"
        android:layout_width="155dp"
        android:layout_height="105dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/location_button_layout"
        android:drawableTop="@drawable/ic_baseline_add_location_24"
        android:onClick="setLocationPicked"
        android:text="@string/choose_your_home_s_location"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_location" />

    <Button
        android:id="@+id/actual_location"
        android:layout_width="155dp"
        android:layout_height="105dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/location_button_layout"
        android:drawableTop="@drawable/ic_baseline_my_location_24"
        android:text="@string/set_your_actual_location"
        android:onClick="setActualLocation"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toEndOf="@+id/pick_location"
        app:layout_constraintTop_toBottomOf="@+id/list_location" />

    <EditText
        android:id="@+id/list_name"
        android:maxLength="25"
        android:layout_width="271dp"
        android:layout_height="45dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/intup_text"
        android:ems="10"
        android:hint="@string/enter_the_list_name"
        android:importantForAutofill="no"
        android:inputType="textShortMessage"
        android:padding="9dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_title" />


</androidx.constraintlayout.widget.ConstraintLayout>