<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/darkGrey"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        app:titleTextColor="@color/white" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingTop="10dp"
        app:singleSelection="true"
        app:selectionRequired="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:checkedButton="@+id/shared_pantries"
        app:layout_constraintTop_toBottomOf="@id/toolbar_main">

        <Button
            android:id="@+id/shared_pantries"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:onClick="showPantries"
            android:layout_gravity="center_horizontal|center"
            android:text="@string/shared_pantries"
            />

        <Button
            android:id="@+id/shared_stores"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="showStores"
            android:text="@string/shared_stores" />

    </com.google.android.material.button.MaterialButtonToggleGroup>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pantry_recycler"
        android:layout_width="411dp"
        android:layout_height="508dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton"
        app:layout_constraintVertical_bias="0.266" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/shopping_recycler"
        android:layout_width="411dp"
        android:layout_height="508dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton"
        app:layout_constraintVertical_bias="0.266"/>



</androidx.constraintlayout.widget.ConstraintLayout>